--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Sen:wght@400..800&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --font-inter: "Inter", sans-serif; 
+  --font-lato: "Lato", sans-serif; 
+  --font-open-sans: "Open Sans", sans-serif; 
+  --font-outfit: "Outfit", sans-serif; 
+  --font-sen: "Sen", sans-serif; 
+  --font-bricolage-grotesque: "Bricolage Grotesque", sans-serif;
+}
