--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,23 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
-  --font-inter: "Inter", sans-serif;
   --font-poppins: "Poppins", sans-serif;
 
-  --bg: 6 6 6;
-  --dbg: 3 3 3;
-  --text: 255 255 255; 
-  --text2: 180 180 180;
+  --bg: 240 240 240;
+  --dbg: 210 210 210;
+  --text: 50 50 50;
+  --text2: 85 85 85;
+}
+
+.dark {
+  --bg: 18 18 18;
+  --dbg: 32 32 32;
+  --text: 240 240 240;
+  --text2: 200 200 200;
 }
 
 html {
