--- a/src/index.css
+++ b/src/index.css
@@ -7,19 +7,38 @@
 :root {
   --font-poppins: "Poppins", sans-serif;
 
-  --bg: 240 240 240;
-  --dbg: 210 210 210;
-  --text: 50 50 50;
-  --text2: 85 85 85;
-}
-
-.dark {
   --bg: 18 18 18;
-  --dbg: 32 32 32;
-  --text: 240 240 240;
-  --text2: 200 200 200;
+  --sep: 40 40 40;
+  --text: 255 255 255;
+  --text2: 180 180 180;
 }
 
 html {
   background: rgb(var(--bg));
+}
+
+@layer base {
+  /* Firefox */
+  html {
+    scrollbar-width: thin; /* auto | thin | none */
+    scrollbar-color: rgb(var(--text)) rgb(var(--bg));
+  }
+
+  /* Chromium/Edge/Safari */
+  ::-webkit-scrollbar {
+    width: 10px;   /* vertical scrollbar width */
+    height: 10px;  /* horizontal scrollbar height */
+  }
+  ::-webkit-scrollbar-track {
+    background: rgb(var(--text) / 0.08);
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: rgb(var(--text) / 0.35);
+    border-radius: 9999px;
+    border: 2px solid transparent;  /* creates padding */
+    background-clip: content-box;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(var(--text) / 0.5);
+  }
 }
