--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,17 +6,16 @@
 
 :root {
   --font-poppins: "Poppins", sans-serif;
-  --font-crimson: "Crimson Text", serif;
 
-  --bg: 223 223 215;
-  --sep: 215 215 207;
+  --bg: 181 181 181;
+  --sep: 165 165 165;
   --text: 8 8 8;
   --text2: 16 16 16;
 }
 
 .dark {
-  --bg: 15 15 15;
-  --sep: 35 35 35;
+  --bg: 12 12 12;
+  --sep: 30 30 30;
   --text: 255 255 255;
   --text2: 195 195 195;
 }
