--- a/src/index.css
+++ b/src/index.css
@@ -2,33 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
-  --font-poppins: "Poppins", sans-serif;
-  --font-zalando: "Zalando Sans Expanded", sans-serif;
-  --bg: 243 243 243;
-  --sep: 211 211 211;
-  --text: 8 8 8;
-  --text2: 80 80 80;
+  --font-montserrat: "Montserrat", sans-serif;
+
+  --bg: 235 235 212;
+  --sep: 215 215 192;
+  --text: 12 12 12;
+  --text2: 52 52 52;
 }
 
 .dark {
   --bg: 12 12 12;
-  --sep: 30 30 30;
-  --text: 255 255 255;
-  --text2: 195 195 195;
+  --sep: 25 25 25;
+  --text: 235 235 212;
+  --text2: 155 155 132;
 }
 
 
 html, body {
-  background: rgb(var(--bg));
+  background: rgb(var(--bg)); 
 }
 
 @layer base {
   /* Firefox */
   html {
     scrollbar-width: thin; /* auto | thin | none */
-    scrollbar-color: rgb(var(--text)) rgb(var(--bg));
+    scrollbar-color: rgb(var(--text2)) rgb(var(--bg));
     scroll-behavior: smooth;
   }
 
