--- a/src/index.css
+++ b/src/index.css
@@ -5,36 +5,29 @@
 :root {
   --font-montserrat: "Montserrat", sans-serif;
 
-  --bg: 235 235 212;
-  --sep: 215 215 192;
-  --text: 12 12 12;
-  --text2: 52 52 52;
-}
-
-.dark {
   --bg: 12 12 12;
   --sep: 25 25 25;
-  --text: 235 235 212;
-  --text2: 155 155 132;
+  --text: 255 255 255;
+  --text2: 155 155 155;
 }
-
 
 html, body {
   background: rgb(var(--bg)); 
+  -webkit-font-smoothing: antialiased; /* Mac/iOS smoothing */
+  -moz-osx-font-smoothing: grayscale;  /* Firefox on macOS */
+  text-rendering: optimizeLegibility;  /* better kerning & ligatures */
+  font-feature-settings: "kern", "liga", "clig", "calt"; /* high-quality OpenType */
 }
 
 @layer base {
-  /* Firefox */
   html {
     scrollbar-width: thin; /* auto | thin | none */
     scrollbar-color: rgb(var(--text2)) rgb(var(--bg));
     scroll-behavior: smooth;
   }
 
-  /* Chromium/Edge/Safari */
   ::-webkit-scrollbar {
     width: 10px;   /* vertical scrollbar width */
-    height: 10px;  /* horizontal scrollbar height */
   }
   ::-webkit-scrollbar-track {
     background: rgb(var(--text) / 0.08);
