--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,17 @@
 @tailwind utilities;
 
 :root {
-  --font-montserrat: "Montserrat", sans-serif;
-
-  --bg: 12 12 12;
-  --sep: 25 25 25;
+  --bg: 8 8 8;
+  --sep: 18 18 18;
   --text: 255 255 255;
-  --text2: 160 160 160;
+  --text2: 150 150 150;
+
+  --p: 1rem;
 }
+
+@screen sm { :root { --p: 2rem; } }
+@screen lg { :root { --p: 2.5rem; } }
+@screen xl { :root { --p: 3.5rem; } }
 
 html, body {
   background: rgb(var(--bg)); 
